* fix strange arrow displayed on mobiles in the scores panel * fix closing of the panel when touching outside of it on mobiles

--- a/sass/modules/_highScores.scss
+++ b/sass/modules/_highScores.scss
@@ -56,7 +56,7 @@
   }
 
   &:before {
-    content: '\25B6';
+    content: '\25BA';
     margin-right: 5px;
   }
   &.active {
